--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,5 +1,7 @@
 <div class="main bg-white py-5 py-md-0 text-black">
   <div class="container-sm p-0 my-4 ">
+    <img src="images/slideone.png" class="w-100" alt="Зеленый чай">
+
     <ngb-carousel [showNavigationArrows]="showNavigationArrows">
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
