changed src imgs main comp

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -5,7 +5,7 @@
     <ngb-carousel [showNavigationArrows]="showNavigationArrows">
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="docs/assets/images/slideone.png" class="w-100" alt="Зеленый чай">
+          <img src="../../../assets/images/slideone.png" class="w-100" alt="Зеленый чай">
           <div class="main-info position-absolute top-0 pt-lg-5 mt-md-5 ps-4 d-none d-sm-block">
             <h1 class="main-title pb-lg-5 pt-xl-5 ps-md-5 ms-md-5 mb-0 mt-5 ms-5 fw-bold lh-1">Скидки на травяные чаи</h1>
             <p class="main-text mb-md-5 ps-5 ms-md-5 fs-md-5 mt-4 ">Узнай все подробности, заполнив заявку</p>
@@ -17,7 +17,7 @@
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="docs/assets/images/Rectangle%206.png" class="w-100" alt="Светлый прямоугольник">
+          <img src="../../../assets/images/Rectangle%206.png" class="w-100" alt="Светлый прямоугольник">
           <div class="main-info position-absolute top-0 pt-xl-5 mt-lg-5 ps-4 z-1 d-none d-sm-block">
             <h1 class="main-title2 mt-5 pt-md-5 ps-lg-5 ms-5 mb-0 fw-bold">Закажи три пачки чая</h1>
             <p class="main-title2 ps-lg-5 ms-5 fw-bold fs-1 mb-md-5">и получи подарок</p>
@@ -26,7 +26,7 @@
             </div>
           </div>
           <div class="z-0 position-absolute end-0 top-0 mt-4 pt-sm-5 me-lg-5 pe-sm-5  d-flex justify-content-end w-50">
-            <img src="docs/assets/images/slidetwo.png" alt="Заварник с цветочным чаем" class="w-75">
+            <img src="../../../assets/images/slidetwo.png" alt="Заварник с цветочным чаем" class="w-75">
           </div>
 
         </div>
