changed src imgs main comp

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -5,7 +5,16 @@
     <ngb-carousel [showNavigationArrows]="showNavigationArrows">
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="slideone.png" class="w-100" alt="Зеленый чай">
+          <img src="https://github.com/EvaOsip/teaCollection/tree/gp/src/assets/images/slideone.png" class="w-100" alt="Зеленый чай">
+           class="w-100" alt="Зеленый чай">
+          <img src="https://github.com/EvaOsip/teaCollection/src/assets/images/slideone.png" class="w-100" alt="Зеленый чай">
+          class="w-100" alt="Зеленый чай">
+          <img src="https://github.com/EvaOsip/teaCollection/assets/images/slideone.png" class="w-100" alt="Зеленый чай">
+          class="w-100" alt="Зеленый чай">
+          <img src="https://github.com/EvaOsip/teaCollection/images/slideone.png" class="w-100" alt="Зеленый чай">
+          class="w-100" alt="Зеленый чай">
+          <img src="images/slideone.png" class="w-100" alt="Зеленый чай">
+          class="w-100" alt="Зеленый чай">
           <div class="main-info position-absolute top-0 pt-lg-5 mt-md-5 ps-4 d-none d-sm-block">
             <h1 class="main-title pb-lg-5 pt-xl-5 ps-md-5 ms-md-5 mb-0 mt-5 ms-5 fw-bold lh-1">Скидки на травяные чаи</h1>
             <p class="main-text mb-md-5 ps-5 ms-md-5 fs-md-5 mt-4 ">Узнай все подробности, заполнив заявку</p>
